--- a/app/src/main/res/layout/activity_helped_people.xml
+++ b/app/src/main/res/layout/activity_helped_people.xml
@@ -19,7 +19,7 @@
             android:textStyle="bold"
             android:textColor="@color/text_dark"
             android:layout_marginBottom="12dp"
-            android:padding="20dp"/>
+            android:padding="40dp"/>
 
         <!-- Example cards for helped people -->
         <LinearLayout
@@ -39,6 +39,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
+                    android:background="@color/bg_light"
                     android:padding="12dp">
 
                     <TextView
@@ -47,8 +48,8 @@
                         android:text="John Doe"
                         android:textStyle="bold"
                         android:textSize="16sp"
-                        android:textColor="@color/text_dark"
-                        android:background="@color/bg_light" />
+                        android:textColor="@color/text_dark" />
+
 
                     <TextView
                         android:layout_width="wrap_content"
