--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -30,6 +30,7 @@
             android:hint="@string/hint_name"
             android:padding="12dp"
             android:background="@drawable/card_bg"
+            android:textColor="@color/primary_dark"
             android:layout_marginBottom="16dp"/>
 
         <EditText
