--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -17,7 +17,8 @@
             android:textSize="22sp"
             android:textStyle="bold"
             android:textColor="@color/text_dark"
-            android:layout_marginBottom="12dp"/>
+            android:layout_marginBottom="12dp"
+            android:padding="40dp"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -31,6 +32,7 @@
             \nOur mission is to make safety simple, fast, and reliable for everyone."
             android:textSize="16sp"
             android:lineSpacingExtra="4dp"
-            android:textColor="@color/text_dark"/>
+            android:textColor="@color/text_dark"
+            android:padding="20dp"/>
     </LinearLayout>
 </ScrollView>
