--- a/app/src/main/res/layout/activity_how_to_use.xml
+++ b/app/src/main/res/layout/activity_how_to_use.xml
@@ -20,7 +20,8 @@
             android:textSize="22sp"
             android:textStyle="bold"
             android:textColor="@color/text_dark"
-            android:layout_marginBottom="16dp"/>
+            android:layout_marginBottom="16dp"
+            android:padding="40dp"/>
 
         <!-- Step 1 -->
         <LinearLayout
