--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,8 @@
             android:text="@string/app_name"
             android:textColor="@color/text_dark"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:padding="20dp"/>
 
         <ImageButton
             android:id="@+id/btnRefresh"
