--- a/app/src/main/res/layout/activity_how_to_use.xml
+++ b/app/src/main/res/layout/activity_how_to_use.xml
@@ -21,7 +21,7 @@
             android:textStyle="bold"
             android:textColor="@color/text_dark"
             android:layout_marginBottom="16dp"
-            android:padding="40dp"/>
+            android:paddingTop="20dp"/>
 
         <!-- Step 1 -->
         <LinearLayout
